Sort list of states and cities using `jinja` builtin funcitons

--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -6,10 +6,10 @@
     <BODY>
         <H1>States</H1>
         <UL>
-	    {% for _, state in states.items() %}
+	    {% for _, state in states.items()|sort(attribute='name') %}
 	    <LI>{{state.id}}: <B>{{state.name}}</B>
 	        <UL>
-	    	{% for city in state.cities %}
+	    	{% for city in state.cities|sort(attribute='name') %}
 		    <LI>{{city.id}}: <B>{{city.name}}</B></LI>
 		{% endfor %}
                 </UL>
