--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <HTML lang="en">
-    <HEAD>
-        <TITLE>HBNB</TITLE>
-    </HEAD>
-    <BODY>
-	{% if state %}
-        <H1>State: {{state.name}}</H1>
-        <H3>Cities:</H3>
-        <UL>
-	{% for city in state.cities|sort(attribute='name') %}
-	    <LI>{{city.id}}: <B>{{city.name}}</B></LI>
-	{% endfor %}
-        </UL>
-	{% else %}
-        <H1>Not found!</H1>
-	{% endif %}
-    </BODY>
+	<HEAD>
+		<TITLE>HBNB</TITLE>
+	</HEAD>
+	<BODY>
+		{% if state %}
+		<H1>State: {{state.name}}</H1>
+		<H3>Cities:</H3>
+		<UL>
+			{% for city in state.cities|sort(attribute='name') %}
+			<LI>{{city.id}}: <B>{{city.name}}</B></LI>
+			{% endfor %}
+		</UL>
+		{% elif state is none %}
+		<H1>States</H1>
+		<UL>
+			<H1>{{state}}</H1>
+			{% for state in states.values()|sort(attribute='name') %}
+			<LI>{{state.id}}: <B>{{state.name}}</B></LI>
+			{% endfor %}
+		</UL>
+		{% else %}
+		<H1>Not found!</H1>
+		{% endif %}
+	</BODY>
 </HTML>
