--- a/web_flask/templates/10-hbnb_filters.html
+++ b/web_flask/templates/10-hbnb_filters.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Static web page that's a copy of AirBnB website">
 		<meta name="author" content="Abdallah Abdelrahman">
-		<link rel="icon" href="images/icon.png">
-		<link href="styles/4-common.css" rel="stylesheet">
-		<link href="styles/3-header.css" rel="stylesheet">
-		<link href="styles/3-footer.css" rel="stylesheet">
-		<link href="styles/6-filters.css" rel="stylesheet">
+		<link rel="icon" href="static/images/icon.png">
+		<link href="static/styles/4-common.css" rel="stylesheet">
+		<link href="static/styles/3-header.css" rel="stylesheet">
+		<link href="static/styles/3-footer.css" rel="stylesheet">
+		<link href="static/styles/6-filters.css" rel="stylesheet">
 	</head>
 
 	<body>
@@ -19,42 +19,27 @@
 			<section class="filters">
 				<div class="locations">
 					<h3>States</h3>
-					<h4>Khartoum, Madani...</h4>
+					<h4>&nbsp;</h4>
 					<ul class="popover">
+						{% for state in states.values()|sort(attribute='name') %}
 						<li>
-							<h2>Khartoum:</h2>
+							<h2>{{state.name}}:</h2>
 							<ul>
-								<li>page</li>
-								<li>page2</li>
+								{% for city in state.cities|sort(attribute='name') %}
+								<li>{{city.name}}</li>
+								{% endfor %}
 							</ul>
 						</li>
-						<li>
-							<h2>Madani:</h2>
-							<ul>
-								<li>page</li>
-								<li>page2</li>
-							</ul>
-						</li>
+						{% endfor %}
 					</ul>
 				</div>
 				<div class="amenities">
 					<h3>Amenities</h3>
-					<h4>Internet, Kitchen...</h4>
+					<h4>&nbsp;</h4>
 					<ul class="popover">
-						<li>
-							<h2>Internet:</h2>
-							<ul>
-								<li>page</li>
-								<li>page2</li>
-							</ul>
-						</li>
-						<li>
-							<h2>Kitchen:</h2>
-							<ul>
-								<li>page</li>
-								<li>page2</li>
-							</ul>
-						</li>
+						{% for amenity in amenities.values()|sort(attribute='name') %}
+						<li>{{amenity.name}}</li>
+						{% endfor %}
 					</ul>
 				</div>
 				<button type="button">Search</button>
